<resources>
    <string name="app_name">ImageArtist</string>
    <string name="stylize">风格化</string>
    <string name="joint">拼图</string>
    <string name="sticker">贴纸</string>
    <string name="frame">边框</string>
    <string name="settings">设置</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="SelectFromCamera">拍照</string>
    <string name="SelectFromAlbum">从相册中选择</string>
    <string name="Cancel">取消</string>
    <string name="SelectRule">点击任意位置选择图片</string>
    <string name="Editor">编辑图片</string>
    <string name="choose_color">主题色化</string>
    <string name="modify">图像调节</string>
    <string name="choose_tool">工具</string>
    <string name="export">导出</string>
    <string name="main_image">main_image</string>
    <string name="export_to_gallery">保存到设备相册</string>
    <string name="share">分享</string>
    <string name="success_saved">保存成功</string>
    <string name="editing">正在处理图片</string>
    <string name="choose_style">选取风格</string>
    <string name="transfer">转换</string>
    <string name="image_to_edit">Image to edit</string>
    <string name="contrast">调整对比度</string>
    <string name="slide_hint">左右滑动屏幕以进行调节</string>
    <string name="light">调整亮度</string>
    <string name="image_in_theme_colorize_activity">Image in theme colorize activity</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="image_in_graffiti_activity">Image in graffiti activity</string>
    <string name="graffiti_color_red">Graffiti color red</string>
    <string name="graffiti_color_blue">Graffiti color blue</string>
    <string name="graffiti_color_green">Graffiti color green</string>
    <string name="graffiti_color_gray">Graffiti color gray</string>
    <string name="graffiti_color_black">Graffiti color black</string>
    <string name="graffiti">涂鸦</string>
    <string name="plump">变粗</string>
    <string name="slim">变细</string>
    <string name="reset">还原</string>
</resources>
