<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/color_area"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/color_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_in_theme_colorize_activity" />

    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/choose_color"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:columnCount="6"
        app:orientation="horizontal"
        app:rowCount="1"
        tools:context="com.example.android_gridlayout.MainActivity">

        <TextView
            android:id="@+id/color_1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/_1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <TextView
            android:id="@+id/color_2"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/_2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <TextView
            android:id="@+id/color_3"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/_3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <TextView
            android:id="@+id/color_4"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/_4"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <TextView
            android:id="@+id/color_5"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/_5"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />
    </android.support.v7.widget.GridLayout>
</LinearLayout>
