<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:alpha="0.5">
    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textSize="17dp"
        android:text="@string/choose_color"/>
    <TextView
        android:id="@+id/frame_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="17dp"
        android:text="@string/frame"/>
    <TextView
        android:id="@+id/modify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="17dp"
        android:text="@string/modify"/>
</LinearLayout>
