<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/graffiti_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/graffiti_photo_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/choose_graffiti_color"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:columnCount="6"
            app:orientation="horizontal"
            app:rowCount="1"
            tools:context="com.example.android_gridlayout.MainActivity">

            <ImageView
                android:id="@+id/color_red"
                android:background="@color/red"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/graffiti_color_red"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <ImageView
                android:id="@+id/color_blue"
                android:background="@color/blue"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/graffiti_color_blue"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <ImageView
                android:id="@+id/color_green"
                android:background="@color/green"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/graffiti_color_green"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <ImageView
                android:id="@+id/color_gray"
                android:background="@color/gray"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/graffiti_color_gray"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <ImageView
                android:id="@+id/color_black"
                android:background="@color/black"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/graffiti_color_black"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />
        </android.support.v7.widget.GridLayout>

    </RelativeLayout>
</LinearLayout>
